@@ -1,0 +1,5 @@
+package org.apache.hama.graph;
+
+public class Walker {
+
+}
